# NewMusicPlayer

./: CMakeLists.txt  PROJECT_SOURCE.md  main.cpp
adapters/qt/: QtArrangementFactory.cpp  QtArrangementFactory.h  QtArrangementPanel.cpp  QtArrangementPanel.h  QtAudioEngine.cpp  QtAudioEngine.h  QtClearConnection.cpp  QtClearConnection.h  QtDialogFactory.cpp  QtDialogFactory.h  QtDisplayFactory.h  QtEndConnection.h  QtLayoutUtil.cpp  QtLayoutUtil.h  QtPickConnection.h  QtPlaybackFactory.h  QtPlaybackPanel.cpp  QtPlaybackPanel.h  QtPlaylistDisplay.cpp  QtPlaylistDisplay.h  QtRemoveConnection.cpp  QtRemoveConnection.h  QtRepeatButton.cpp  QtRepeatButton.h  QtRevealConnection.h  QtSearchField.cpp  QtSearchField.h  QtSearchFieldConnection.cpp  QtSearchFieldConnection.h  QtSearchOverlay.cpp  QtSearchOverlay.h  QtShuffleButton.cpp  QtShuffleButton.h  QtSortConnection.cpp  QtSortConnection.h  QtSortHeader.cpp  QtSortHeader.h  QtToggleConnection.h  QtToolbar.cpp  QtToolbar.h  (+8 more)
controller/: AdPresenter.cpp  AdPresenter.h  AdRelay.cpp  AdRelay.h  ArrangementController.cpp  ArrangementController.h  ArrangementPresenter.cpp  ArrangementPresenter.h  ArrangementRelay.cpp  ArrangementRelay.h  Controller.cpp  Controller.h  CustomMode.cpp  CustomMode.h  EnableCoordinator.cpp  EnableCoordinator.h  EnableGroup.cpp  EnableGroup.h  LibraryController.cpp  LibraryController.h  LibraryPresenter.cpp  LibraryPresenter.h  LibraryRelay.cpp  LibraryRelay.h  OrderingController.cpp  OrderingController.h  PlaybackModeController.cpp  PlaybackModeController.h  PlaylistPresenter.cpp  PlaylistPresenter.h  PlaylistRenderer.cpp  PlaylistRenderer.h  RepeatController.cpp  RepeatController.h  RepeatPresenter.cpp  RepeatPresenter.h  RepeatRelay.cpp  RepeatRelay.h  SearchController.cpp  SearchController.h  (+14 more)
controller/factory/: ControllerFactory.cpp  ControllerFactory.h  PresenterFactory.cpp  PresenterFactory.h  RelayFactory.cpp  RelayFactory.h
core/: CollectionFactory.cpp  CollectionFactory.h  ControllerFactory.cpp  ControllerFactory.h  EventFactory.cpp  EventFactory.h  PlaybackFactory.cpp  PlaybackFactory.h  RelayFactory.cpp  RelayFactory.h  ServiceFactory.cpp  ServiceFactory.h
model/: AdBus.cpp  AdBus.h  Advertisement.cpp  Advertisement.h  Channel.cpp  Channel.h  Cursor.cpp  Cursor.h  DurationSort.cpp  FileEraser.cpp  FileEraser.h  FormatRegistry.cpp  FormatRegistry.h  IAdListener.h  IArrangementStrategy.h  ILibraryListener.h  IPathVisitor.h  IRemovalListener.h  IRepeatListener.h  ISortingAlgorithm.h  ITrackListener.h  LibraryBus.cpp  LibraryBus.h  MusicDirectory.cpp  MusicDirectory.h  NoRepeatMode.cpp  NoRepeatMode.h  OriginalOrder.cpp  OriginalOrder.h  Playlist.cpp  Playlist.h  QuickSort.h  RandomAdPolicy.cpp  RandomAdPolicy.h  RepeatAllMode.cpp  RepeatAllMode.h  RepeatBus.cpp  RepeatBus.h  RepeatListener.cpp  RepeatListener.h  (+21 more)
model/event/: AdBus.cpp  AdBus.h  Bus.h  ITrackListener.h  LibraryBus.cpp  RepeatBus.cpp  RepeatBus.h  TrackBus.cpp  TrackBus.h
model/factory/: CollectionFactory.cpp  CollectionFactory.h  EventFactory.cpp  EventFactory.h  PlaybackFactory.cpp  PlaybackFactory.h  ServiceFactory.cpp  ServiceFactory.h
model/playback/: AdScheduler.cpp  AdScheduler.h  Advertisement.cpp  Advertisement.h  IAdListener.h  IAdPolicy.h  IRepeatListener.h  NoRepeatMode.cpp  NoRepeatMode.h  NoRepeatStrategy.cpp  NoRepeatStrategy.h  RandomAdPolicy.cpp  RandomAdPolicy.h  RepeatAllMode.cpp  RepeatAllMode.h  RepeatAllStrategy.cpp  RepeatAllStrategy.h  RepeatBroadcaster.cpp  RepeatBroadcaster.h  RepeatCoordinator.cpp  RepeatCoordinator.h  RepeatListener.cpp  RepeatListener.h  RepeatMode.cpp  RepeatMode.h  RepeatModeKind.h  RepeatOneMode.cpp  RepeatOneMode.h  RepeatOneStrategy.cpp  RepeatOneStrategy.h  RepeatPolicy.cpp  RepeatPolicy.h  RepeatStrategy.cpp  RepeatStrategy.h
model/service/: Catalog.cpp  Catalog.h  ISearchProvider.h  Library.cpp  Library.h  LibraryEditor.cpp  LibraryEditor.h  LibraryService.cpp  LibraryService.h  Playback.cpp  Playback.h  PlaybackService.cpp  PlaybackService.h  PlaybackTransport.cpp  PlaybackTransport.h  RepeatModeCommand.cpp  RepeatModeCommand.h  RepeatSwitch.cpp  RepeatSwitch.h  Setlist.cpp  Setlist.h  TrackCatalog.cpp  TrackCatalog.h
model/song/: Channel.h  FileEraser.cpp  FileEraser.h  FileMetadata.cpp  FileMetadata.h  ISongVisitor.h  Song.cpp  Song.h  SongFileDeleter.cpp  SongFileDeleter.h  SongStartAnnouncer.cpp  SongStartAnnouncer.h  SongTitle.cpp  SongTitle.h  SongTitleParser.cpp  SongTitleParser.h
model/tracklist/: Cursor.cpp  Cursor.h  DateSort.cpp  DateSort.h  DurationSort.cpp  DurationSort.h  IArrangementStrategy.h  IRemovalListener.h  OriginalOrder.cpp  OriginalOrder.h  QuickSort.cpp  QuickSort.h  ReverseArrangement.cpp  ReverseArrangement.h  ReverseStrategy.cpp  ReverseStrategy.h  ShellSort.h  ShuffleArrangement.cpp  ShuffleArrangement.h  ShuffleStrategy.cpp  ShuffleStrategy.h  TrackCursor.cpp  TrackCursor.h  Tracklist.cpp  Tracklist.h  TracklistImporter.cpp  TracklistImporter.h
resources/: styles.qss
test/: AdListenerSpy.cpp  AdListenerSpy.h  DirectoryTestFixture.h  LibraryListenerSpy.cpp  LibraryListenerSpy.h  MockPlaybackListener.cpp  MockPlaybackListener.h  ModelTestFixture.cpp  ModelTestFixture.h  PathVisitorSpy.cpp  PathVisitorSpy.h  RegressionTest.cpp  SongVisitorSpy.cpp  SongVisitorSpy.h  TestPlaylistVisitor.cpp  TestPlaylistVisitor.h  TrackListenerSpy.cpp  TrackListenerSpy.h
test/model/: AdSchedulerTest.cpp  AdSchedulerTest.h  AdvertisementTest.cpp  AdvertisementTest.h  FileMetadataTest.cpp  FileMetadataTest.h  ModelTest.cpp  ModelTest.h  PlaylistTest.cpp  PlaylistTest.h  QuickSortTest.cpp  QuickSortTest.h  ShellSortTest.cpp  ShellSortTest.h  SongTest.cpp  SongTest.h  SongTitleTest.cpp  SongTitleTest.h  SortingTest.cpp  SortingTest.h
test/use_cases/: AddSongUseCaseTest.cpp  (+7 more)
view/: IArrangementControl.h  IAudioControl.h  IAudioPlayer.h  IDisplayControl.h  IEnableable.h  IOrderControl.h  IPlaybackControl.h  IPlaybackDisplay.h  IRefreshable.h  IRepeatControl.h  IRepeatDisplay.h  ISearchInput.h  ISearchPanel.h  ISortDisplay.h  ITimingPanel.h  IToolbarDisplay.h
(+60 files in other folders)
