cmake_minimum_required(VERSION 3.31)
project(NewMusicPlayer)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 COMPONENTS
        Core
        Gui
        Widgets
        Multimedia
        REQUIRED)

add_executable(NewMusicPlayer main.cpp
        model/Song.cpp
        model/Song.h
        model/IPlaylistVisitor.h
        model/SortingAlgorithm.h
        model/ShellSort.cpp
        model/ShellSort.h
        model/DurationSort.cpp
        model/DurationSort.h
        model/DateSort.cpp
        model/DateSort.h
        model/QuickSort.cpp
        model/QuickSort.h
        model/Playlist.cpp
        model/Playlist.h
        model/Arrangement.cpp
        model/Arrangement.h
        model/IPlaybackListener.h
        model/Advertisement.cpp
        model/Advertisement.h
        model/MusicLibrary.cpp
        model/MusicLibrary.h
        model/Channel.cpp
        model/Channel.h
        model/PlaybackNotifier.cpp
        model/PlaybackNotifier.h
        model/RepeatStrategy.cpp
        model/RepeatStrategy.h
        model/NoRepeatMode.cpp
        model/NoRepeatMode.h
        model/RepeatOneMode.cpp
        model/RepeatOneMode.h
        model/RepeatAllMode.cpp
        model/RepeatAllMode.h
        model/RepeatMode.cpp
        model/RepeatMode.h
        model/service/Playback.cpp
        model/service/Playback.h
        model/service/Library.cpp
        model/service/Library.h
        model/service/Setlist.cpp
        model/service/Setlist.h
        model/service/Catalog.cpp
        model/service/Catalog.h
        model/service/RepeatSwitch.cpp
        model/service/RepeatSwitch.h
        model/IDice.h
        model/Dice.cpp
        model/Dice.h
        model/FileMetadata.cpp
        model/FileMetadata.h
        view/IPlaylistPanel.h
        view/ISearchPanel.h
        view/IControlPanel.h
        view/INotification.h
        view/IDialog.h
        view/IPlayerView.h
        view/IPlaybackControl.h
        view/ILibraryControl.h
        view/IDisplayControl.h
        view/IPlayerListener.h
        view/IAudioPlayer.h
        controller/PlaylistRenderer.cpp
        controller/PlaylistRenderer.h
        controller/SortMode.cpp
        controller/SortMode.h
        controller/TitleDescending.cpp
        controller/TitleDescending.h
        controller/CustomMode.cpp
        controller/CustomMode.h
        controller/SortController.cpp
        controller/SortController.h
        controller/SearchController.cpp
        controller/SearchController.h
        controller/Controller.cpp
        controller/Controller.h
        adapters/qt/QtLayoutUtil.cpp
        adapters/qt/QtLayoutUtil.h
        adapters/qt/QtPlaybackPanel.cpp
        adapters/qt/QtPlaybackPanel.h
        adapters/qt/QtVolumePanel.cpp
        adapters/qt/QtVolumePanel.h
        adapters/qt/QtToolbar.cpp
        adapters/qt/QtToolbar.h
        adapters/qt/QtProgressPanel.cpp
        adapters/qt/QtProgressPanel.h
        adapters/qt/QtSortHeader.cpp
        adapters/qt/QtSortHeader.h
        adapters/qt/QtPlaylistDisplay.cpp
        adapters/qt/QtPlaylistDisplay.h
        adapters/qt/QtSearchOverlay.cpp
        adapters/qt/QtSearchOverlay.h
        adapters/qt/QtAudioEngine.cpp
        adapters/qt/QtAudioEngine.h
        adapters/qt/QtNotification.cpp
        adapters/qt/QtNotification.h
        adapters/qt/QtDialog.cpp
        adapters/qt/QtDialog.h
        adapters/qt/QtDragDrop.cpp
        adapters/qt/QtDragDrop.h
        adapters/qt/QtViewFactory.cpp
        adapters/qt/QtViewFactory.h
        adapters/qt/QtStyler.cpp
        adapters/qt/QtStyler.h
        adapters/qt/QtView.cpp
        adapters/qt/QtView.h
)

add_custom_target(CopyResources ALL
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_SOURCE_DIR}/resources $<TARGET_FILE_DIR:NewMusicPlayer>/resources
)

add_dependencies(NewMusicPlayer CopyResources)

target_link_libraries(NewMusicPlayer
        Qt::Core
        Qt::Gui
        Qt::Widgets
        Qt::Multimedia
)

enable_testing()
find_package(GTest REQUIRED)

add_executable(NewMusicPlayerTests
        test/MockPlaybackListener.cpp
        test/MockPlaybackListener.h
        test/TestPlaylistVisitor.cpp
        test/TestPlaylistVisitor.h
        test/ModelTestFixture.cpp
        test/ModelTestFixture.h
        test/DirectoryTestFixture.cpp
        test/DirectoryTestFixture.h
        test/model/FileMetadataTest.cpp
        test/model/FileMetadataTest.h
        test/model/SongTest.cpp
        test/model/PlaylistTest.cpp
        test/model/AdvertisementTest.cpp
        test/model/MusicLibraryTest.cpp
        test/model/SortingTest.cpp
        test/model/ModelTest.cpp
        test/RegressionTest.cpp
        test/use_cases/PlaySongUseCaseTest.cpp
        test/use_cases/PlaySongUseCaseTest.h
        test/use_cases/SortPlaylistUseCaseTest.cpp
        test/use_cases/SortPlaylistUseCaseTest.h
        test/use_cases/SearchSongUseCaseTest.cpp
        test/use_cases/SearchSongUseCaseTest.h
        test/use_cases/AddSongUseCaseTest.cpp
        test/use_cases/AddSongUseCaseTest.h
        test/use_cases/RemoveSongUseCaseTest.cpp
        test/use_cases/RemoveSongUseCaseTest.h
        test/use_cases/NavigatePlaylistUseCaseTest.cpp
        test/use_cases/NavigatePlaylistUseCaseTest.h
        model/Song.cpp
        model/Song.h
        model/IPlaylistVisitor.h
        model/IPlaybackListener.h
        model/SortingAlgorithm.h
        model/ShellSort.cpp
        model/ShellSort.h
        model/DurationSort.cpp
        model/DurationSort.h
        model/DateSort.cpp
        model/DateSort.h
        model/QuickSort.cpp
        model/QuickSort.h
        model/Playlist.cpp
        model/Playlist.h
        model/Arrangement.cpp
        model/Arrangement.h
        model/Advertisement.cpp
        model/Advertisement.h
        model/MusicLibrary.cpp
        model/MusicLibrary.h
        model/Channel.cpp
        model/Channel.h
        model/PlaybackNotifier.cpp
        model/PlaybackNotifier.h
        model/RepeatStrategy.cpp
        model/RepeatStrategy.h
        model/NoRepeatMode.cpp
        model/NoRepeatMode.h
        model/RepeatOneMode.cpp
        model/RepeatOneMode.h
        model/RepeatAllMode.cpp
        model/RepeatAllMode.h
        model/RepeatMode.cpp
        model/RepeatMode.h
        model/service/Playback.cpp
        model/service/Playback.h
        model/service/Library.cpp
        model/service/Library.h
        model/service/Setlist.cpp
        model/service/Setlist.h
        model/service/Catalog.cpp
        model/service/Catalog.h
        model/service/RepeatSwitch.cpp
        model/service/RepeatSwitch.h
        model/IDice.h
        model/Dice.cpp
        model/Dice.h
        model/FileMetadata.cpp
        model/FileMetadata.h
)

target_link_libraries(NewMusicPlayerTests GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(NewMusicPlayerTests)
