cmake_minimum_required(VERSION 3.31)
project(NewMusicPlayer)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 COMPONENTS
        Core
        Gui
        Widgets
        Multimedia
        REQUIRED)

add_executable(NewMusicPlayer main.cpp
        model/song/Song.cpp
        model/song/Song.h
        model/song/ISongVisitor.h
        model/song/IPathVisitor.h
        model/tracklist/ShellSort.cpp
        model/tracklist/ShellSort.h
        model/tracklist/DurationSort.cpp
        model/tracklist/DurationSort.h
        model/tracklist/DateSort.cpp
        model/tracklist/DateSort.h
        model/tracklist/QuickSort.cpp
        model/tracklist/QuickSort.h
        model/tracklist/Tracklist.cpp
        model/tracklist/Tracklist.h
        model/tracklist/TrackCursor.cpp
        model/tracklist/TrackCursor.h
        model/tracklist/IRemovalListener.h
        model/tracklist/IArrangementStrategy.h
        model/tracklist/ShuffleArrangement.cpp
        model/tracklist/ShuffleArrangement.h
        model/tracklist/ReverseArrangement.cpp
        model/tracklist/ReverseArrangement.h
        model/tracklist/OriginalOrder.cpp
        model/tracklist/OriginalOrder.h
        model/event/ITrackListener.h
        model/event/ILibraryListener.h
        model/playback/IAdListener.h
        model/playback/IRepeatListener.h
        model/playback/RepeatModeKind.h
        model/event/Bus.h
        model/event/TrackBus.cpp
        model/event/TrackBus.h
        model/event/LibraryBus.cpp
        model/event/LibraryBus.h
        model/event/AdBus.cpp
        model/event/AdBus.h
        model/event/RepeatBus.cpp
        model/event/RepeatBus.h
        model/playback/RepeatCoordinator.cpp
        model/playback/RepeatCoordinator.h
        model/playback/Advertisement.cpp
        model/playback/Advertisement.h
        model/playback/IAdPolicy.h
        model/playback/RandomAdPolicy.cpp
        model/playback/RandomAdPolicy.h
        model/library/MusicDirectory.cpp
        model/library/MusicDirectory.h
        model/library/AudioFormatRegistry.cpp
        model/library/AudioFormatRegistry.h
        model/song/SongFileDeleter.cpp
        model/song/SongFileDeleter.h
        model/song/SongStartAnnouncer.cpp
        model/song/SongStartAnnouncer.h
        model/playback/RepeatStrategy.cpp
        model/playback/RepeatStrategy.h
        model/playback/NoRepeatStrategy.cpp
        model/playback/NoRepeatStrategy.h
        model/playback/RepeatOneStrategy.cpp
        model/playback/RepeatOneStrategy.h
        model/playback/RepeatAllStrategy.cpp
        model/playback/RepeatAllStrategy.h
        model/playback/RepeatPolicy.cpp
        model/playback/RepeatPolicy.h
        model/service/PlaybackService.cpp
        model/service/PlaybackService.h
        model/service/LibraryService.cpp
        model/service/LibraryService.h
        model/service/Setlist.cpp
        model/service/Setlist.h
        model/service/TrackCatalog.cpp
        model/service/TrackCatalog.h
        model/service/ISearchProvider.h
        model/library/IDice.h
        model/library/Dice.cpp
        model/library/Dice.h
        model/song/FileMetadata.cpp
        model/song/FileMetadata.h
        model/song/SongTitleParser.cpp
        model/song/SongTitleParser.h
        view/IPlaylistPanel.h
        view/ISearchPanel.h
        view/INotification.h
        view/IDialog.h
        view/IPlaybackControl.h
        view/IAudioControl.h
        view/ILibraryControl.h
        view/IDisplayControl.h
        view/IArrangementControl.h
        view/IAudioPlayer.h
        view/IEnableable.h
        view/ITimingPanel.h
        view/ISortDisplay.h
        view/IRepeatDisplay.h
        view/IToolbarDisplay.h
        controller/PlaylistRenderer.cpp
        controller/PlaylistRenderer.h
        controller/SortMode.cpp
        controller/SortMode.h
        controller/TitleDescendingSort.cpp
        controller/TitleDescendingSort.h
        controller/CustomMode.cpp
        controller/CustomMode.h
        controller/SearchController.cpp
        controller/SearchController.h
        controller/TrackRelay.cpp
        controller/TrackRelay.h
        controller/LibraryRelay.cpp
        controller/LibraryRelay.h
        controller/AdRelay.cpp
        controller/AdRelay.h
        controller/RepeatRelay.cpp
        controller/RepeatRelay.h
        controller/EnableCoordinator.cpp
        controller/EnableCoordinator.h
        controller/TransportController.cpp
        controller/TransportController.h
        controller/LibraryController.cpp
        controller/LibraryController.h
        controller/ArrangementController.cpp
        controller/ArrangementController.h
        controller/ArrangementRelay.cpp
        controller/ArrangementRelay.h
        adapters/qt/QtLayoutUtil.cpp
        adapters/qt/QtLayoutUtil.h
        adapters/qt/widget/QtTransportPanel.cpp
        adapters/qt/widget/QtTransportPanel.h
        adapters/qt/widget/QtShuffleButton.cpp
        adapters/qt/widget/QtShuffleButton.h
        adapters/qt/widget/QtRepeatButton.cpp
        adapters/qt/widget/QtRepeatButton.h
        adapters/qt/widget/QtVolumePanel.cpp
        adapters/qt/widget/QtVolumePanel.h
        adapters/qt/widget/QtLibraryBar.cpp
        adapters/qt/widget/QtLibraryBar.h
        adapters/qt/widget/QtSkipButton.cpp
        adapters/qt/widget/QtSkipButton.h
        adapters/qt/widget/QtProgressPanel.cpp
        adapters/qt/widget/QtProgressPanel.h
        adapters/qt/widget/QtSortHeader.cpp
        adapters/qt/widget/QtSortHeader.h
        adapters/qt/widget/QtPlaylistDisplay.cpp
        adapters/qt/widget/QtPlaylistDisplay.h
        adapters/qt/widget/QtSearchOverlay.cpp
        adapters/qt/widget/QtSearchOverlay.h
        adapters/qt/widget/QtAudioEngine.cpp
        adapters/qt/widget/QtAudioEngine.h
        adapters/qt/widget/QtAdTimer.cpp
        adapters/qt/widget/QtAdTimer.h
        adapters/qt/widget/QtNotification.cpp
        adapters/qt/widget/QtNotification.h
        adapters/qt/widget/QtDialog.cpp
        adapters/qt/widget/QtDialog.h
        adapters/qt/QtDragDrop.cpp
        adapters/qt/QtDragDrop.h
        adapters/qt/icon/QtIconPainter.cpp
        adapters/qt/icon/QtIconPainter.h
        adapters/qt/factory/QtPlaybackFactory.cpp
        adapters/qt/factory/QtPlaybackFactory.h
        adapters/qt/factory/QtArrangementFactory.cpp
        adapters/qt/factory/QtArrangementFactory.h
        adapters/qt/factory/QtDisplayFactory.cpp
        adapters/qt/factory/QtDisplayFactory.h
        adapters/qt/factory/QtDialogFactory.cpp
        adapters/qt/factory/QtDialogFactory.h
        adapters/qt/style/QtStyler.cpp
        adapters/qt/style/QtStyler.h
        adapters/qt/widget/QtSearchField.cpp
        adapters/qt/widget/QtSearchField.h
        adapters/qt/connection/QtEndConnection.cpp
        adapters/qt/connection/QtEndConnection.h
        adapters/qt/connection/QtToggleConnection.cpp
        adapters/qt/connection/QtToggleConnection.h
        adapters/qt/connection/QtRevealConnection.cpp
        adapters/qt/connection/QtRevealConnection.h
        adapters/qt/connection/QtSearchFieldConnection.cpp
        adapters/qt/connection/QtSearchFieldConnection.h
        adapters/qt/connection/QtPickConnection.cpp
        adapters/qt/connection/QtPickConnection.h
        adapters/qt/connection/QtClearConnection.cpp
        adapters/qt/connection/QtClearConnection.h
        adapters/qt/connection/QtSortConnection.cpp
        adapters/qt/connection/QtSortConnection.h
        adapters/qt/connection/QtRemoveConnection.cpp
        adapters/qt/connection/QtRemoveConnection.h
        adapters/qt/QtView.cpp
        adapters/qt/QtView.h
        model/factory/EventFactory.cpp
        model/factory/EventFactory.h
        model/factory/CollectionFactory.cpp
        model/factory/CollectionFactory.h
        model/factory/PlaybackFactory.cpp
        model/factory/PlaybackFactory.h
        model/factory/ServiceFactory.cpp
        model/factory/ServiceFactory.h
        controller/factory/ControllerFactory.cpp
        controller/factory/ControllerFactory.h
        controller/factory/RelayFactory.cpp
        controller/factory/RelayFactory.h
)

add_custom_target(CopyResources ALL
        COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_SOURCE_DIR}/resources $<TARGET_FILE_DIR:NewMusicPlayer>/resources
)

add_dependencies(NewMusicPlayer CopyResources)

target_link_libraries(NewMusicPlayer
        Qt::Core
        Qt::Gui
        Qt::Widgets
        Qt::Multimedia
)

enable_testing()
find_package(GTest REQUIRED)

add_executable(NewMusicPlayerTests
        test/MockPlaybackListener.cpp
        test/MockPlaybackListener.h
        test/TestPlaylistVisitor.cpp
        test/TestPlaylistVisitor.h
        test/ModelTestFixture.cpp
        test/ModelTestFixture.h
        test/DirectoryTestFixture.cpp
        test/DirectoryTestFixture.h
        test/model/FileMetadataTest.cpp
        test/model/FileMetadataTest.h
        test/model/SongTest.cpp
        test/model/PlaylistTest.cpp
        test/model/AdvertisementTest.cpp
        test/model/SortingTest.cpp
        test/model/ModelTest.cpp
        test/RegressionTest.cpp
        test/use_cases/PlaySongUseCaseTest.cpp
        test/use_cases/PlaySongUseCaseTest.h
        test/use_cases/SortPlaylistUseCaseTest.cpp
        test/use_cases/SortPlaylistUseCaseTest.h
        test/use_cases/SearchSongUseCaseTest.cpp
        test/use_cases/SearchSongUseCaseTest.h
        test/use_cases/AddSongUseCaseTest.cpp
        test/use_cases/AddSongUseCaseTest.h
        test/use_cases/RemoveSongUseCaseTest.cpp
        test/use_cases/RemoveSongUseCaseTest.h
        test/use_cases/NavigatePlaylistUseCaseTest.cpp
        test/use_cases/NavigatePlaylistUseCaseTest.h
        model/song/Song.cpp
        model/song/Song.h
        model/song/ISongVisitor.h
        model/event/ITrackListener.h
        model/event/ILibraryListener.h
        model/playback/IAdListener.h
        model/playback/IRepeatListener.h
        model/playback/RepeatModeKind.h
        model/event/Bus.h
        model/event/TrackBus.cpp
        model/event/TrackBus.h
        model/event/LibraryBus.cpp
        model/event/LibraryBus.h
        model/event/AdBus.cpp
        model/event/AdBus.h
        model/event/RepeatBus.cpp
        model/event/RepeatBus.h
        model/playback/RepeatCoordinator.cpp
        model/playback/RepeatCoordinator.h
        model/tracklist/ShellSort.cpp
        model/tracklist/ShellSort.h
        model/tracklist/DurationSort.cpp
        model/tracklist/DurationSort.h
        model/tracklist/DateSort.cpp
        model/tracklist/DateSort.h
        model/tracklist/QuickSort.cpp
        model/tracklist/QuickSort.h
        model/tracklist/Tracklist.cpp
        model/tracklist/Tracklist.h
        model/tracklist/TrackCursor.cpp
        model/tracklist/TrackCursor.h
        model/tracklist/IRemovalListener.h
        model/tracklist/IArrangementStrategy.h
        model/tracklist/ShuffleArrangement.cpp
        model/tracklist/ShuffleArrangement.h
        model/tracklist/ReverseArrangement.cpp
        model/tracklist/ReverseArrangement.h
        model/tracklist/OriginalOrder.cpp
        model/tracklist/OriginalOrder.h
        model/playback/Advertisement.cpp
        model/playback/Advertisement.h
        model/playback/IAdPolicy.h
        model/playback/RandomAdPolicy.cpp
        model/playback/RandomAdPolicy.h
        model/library/MusicDirectory.cpp
        model/library/MusicDirectory.h
        model/library/AudioFormatRegistry.cpp
        model/library/AudioFormatRegistry.h
        model/song/SongFileDeleter.cpp
        model/song/SongFileDeleter.h
        model/song/SongStartAnnouncer.cpp
        model/song/SongStartAnnouncer.h
        model/playback/RepeatStrategy.cpp
        model/playback/RepeatStrategy.h
        model/playback/NoRepeatStrategy.cpp
        model/playback/NoRepeatStrategy.h
        model/playback/RepeatOneStrategy.cpp
        model/playback/RepeatOneStrategy.h
        model/playback/RepeatAllStrategy.cpp
        model/playback/RepeatAllStrategy.h
        model/playback/RepeatPolicy.cpp
        model/playback/RepeatPolicy.h
        model/service/PlaybackService.cpp
        model/service/PlaybackService.h
        model/service/LibraryService.cpp
        model/service/LibraryService.h
        model/service/Setlist.cpp
        model/service/Setlist.h
        model/service/TrackCatalog.cpp
        model/service/TrackCatalog.h
        model/service/ISearchProvider.h
        model/library/IDice.h
        model/library/Dice.cpp
        model/library/Dice.h
        model/song/FileMetadata.cpp
        model/song/FileMetadata.h
        model/song/SongTitleParser.cpp
        model/song/SongTitleParser.h
        test/model/SongTitleTest.cpp
        test/model/SongTitleTest.h
)

target_link_libraries(NewMusicPlayerTests GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(NewMusicPlayerTests)
